realized forth task